Add bitcoin category

--- a/circuitbreaker/umbrel-app.yml
+++ b/circuitbreaker/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: circuitbreaker
-category: finance
+category: bitcoin
 name: Circuit Breaker
 version: "v0.4.3"
 tagline: Your Lightning Node's Firewall
