--- a/helipad/umbrel-app.yml
+++ b/helipad/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: helipad
-category: finance
+category: bitcoin
 name: Helipad
 version: "0.1.10"
 tagline: View boosts & boostagrams from Podcasting 2.0 apps
