--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: lnbits
-category: finance
+category: bitcoin
 name: LNbits
 version: "0.10.6"
 tagline: Multi-user wallet management system
