--- a/lndg/umbrel-app.yml
+++ b/lndg/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: lndg
-category: finance
+category: bitcoin
 name: LNDg
 version: "1.6.4"
 tagline: Analyze and automate your Lightning node management
