--- a/lnplus/umbrel-app.yml
+++ b/lnplus/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: lnplus
-category: finance
+category: bitcoin
 name: Lightning Network+
 version: "0.1.31"
 tagline: Get incoming liquidity and double your channels for free
