--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: mempool
-category: finance
+category: bitcoin
 name: mempool
 version: "2.5.0"
 tagline: A self-hosted explorer for the Bitcoin community
