--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: torq
-category: finance
+category: bitcoin
 name: Torq
 version: "v0.22.4"
 tagline: Capital management for routing nodes on the lightning network
