--- a/woofbot/umbrel-app.yml
+++ b/woofbot/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1.1
 id: woofbot
-category: finance
+category: bitcoin
 name: WoofBot (without Lightning)
 version: "0.9.7"
 tagline: A chatbot for your personal node
