--- a/bitfeed/umbrel-app.yml
+++ b/bitfeed/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: bitfeed
-category: finance
+category: bitcoin
 name: Bitfeed
 version: "2.3.4"
 tagline: A beautiful mempool visualizer and block explorer
