--- a/bluewallet/umbrel-app.yml
+++ b/bluewallet/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: bluewallet
-category: finance
+category: bitcoin
 name: BlueWallet Lightning
 version: "1.4.1"
 tagline: Connect BlueWallet to your Lightning node
