--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: btc-rpc-explorer
-category: finance
+category: bitcoin
 name: BTC RPC Explorer
 version: "3.3.0"
 tagline: Simple, database-free blockchain explorer
