--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: btcpay-server
-category: finance
+category: bitcoin
 name: BTCPay Server
 version: "1.9.2"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
