--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: core-lightning-rtl
-category: finance
+category: bitcoin
 name: Ride The Lightning (Core Lightning)
 version: "0.13.2-beta"
 tagline: Manage your Core Lightning node with RTL
