--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1.1
 id: electrs
-category: finance
+category: bitcoin
 name: Electrs
 version: "0.9.10"
 tagline: A simple and efficient Electrum Server
