--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: itchysats
-category: finance
+category: bitcoin
 name: ItchySats
 version: "0.7.0"
 tagline: Peer-2-peer derivatives on Bitcoin
