--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1.1
 id: jam
-category: finance
+category: bitcoin
 name: Jam
 version: "0.1.5"
 tagline: Your sats. Your privacy. Your profit.
