--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: lightning-terminal
-category: finance
+category: bitcoin
 name: Lightning Terminal
 version: "0.10.1-alpha"
 tagline: The easiest way to manage channel liquidity
