--- a/lndboss/umbrel-app.yml
+++ b/lndboss/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: lndboss
-category: finance
+category: bitcoin
 name: LndBoss
 version: "2.19.1"
 tagline: A GUI for BalanceOfSatoshis
