--- a/lnmarkets/umbrel-app.yml
+++ b/lnmarkets/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: lnmarkets
-category: finance
+category: bitcoin
 name: LN Markets
 version: "1.3.0"
 tagline: Trade Bitcoin derivatives on Lightning
