--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: ride-the-lightning
-category: finance
+category: bitcoin
 name: Ride The Lightning
 version: "0.13.2-beta-hotfix-1"
 tagline: A powerful dashboard for the Lightning Network
