--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: thunderhub
-category: finance
+category: bitcoin
 name: ThunderHub
 version: "0.13.19"
 tagline: Take full control of your Lightning node
