--- a/chatbot-ui/umbrel-app.yml
+++ b/chatbot-ui/umbrel-app.yml
@@ -27,21 +27,29 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  New Features
+  New Features:
+
 
   Added support for Azure OpenAI, with temperature now available as a parameter. The chat window has been improved with a sticky Model Name Bar at the top and enhanced mobile layout, along with a blinking typing cursor.
 
-  Enhancements
+
+  Enhancements:
+
 
   A major refactor has been carried out for better code maintainability alongside an improved hotkey support for plugins. README now better documents various settings. Enhancements were made to existing translations, and new ones have been added, encompassing Romanian, Polish, Catalan, Bangla, Turkish, and Finnish languages. The app now sorts folders alphabetically and features an updated demo image, as well as performance improvements.
 
-  Bug Fixes
+
+  Bug Fixes:
+
 
   Several Google plugin issues have been fixed, along with issues related to hiding API Key and Plugin Key buttons if set server-side. Other fixes include addressing the copy button on code block, modal scrolling on small devices, search box disappearing in Sidebar component, message input not updating on chat list switch, and site not opening if the imported JSON is invalid. Chat messages disappearing on edit, temperature font color, scroll-down button overlapping chat input, prompt selection, and import issues have all been resolved.
 
+
   Others:
-  
+
+
   Spelling, brevity, and wording improvements have been made throughout the app, and a Security.md file was created to address vulnerability reporting.
+
 
   This version is up-to-date as of commit fa3f6e9 here: github.com/mckaywrigley/chatbot-ui/commit/fa3f6e9
 submitter: Umbrel
