--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: calibre-web
 category: files
 name: Calibre Web
-version: "0.6.19"
+version: "0.6.20"
 tagline: A clean web app for your eBooks
 description: >-
   Calibre-web is a web app providing a clean interface for browsing, reading and downloading eBooks using an existing Calibre database.
@@ -34,25 +34,23 @@ torOnly: false
 releaseNotes: >-
   New features:
 
-  - Cover images are cached when using gdrive storage and local storage
+  - Updated pdf reader
   
-  - Kobo sync now uses calibre-web generated thumbnails as cover pictures
+  - Improvements for Caliblur Theme
   
-  - Pagination button disapear in standard theme once infinite scroll is triggered
+  - series type custom column are enable
   
-  - And more. Full details can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.19
+  - And more. Full details can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.20
 
 
   Bug fixes:
 
-  - Read status checkbox works again for custom columns
+  - Allow deletion of kindle email address and force email addresses to have a valid format
+   
+  - Fix for big databases not showing tags
   
-  - Character '\u200d' is removed from end of email address and no longer causes an error on send emails
-  
-  - Gevent log output is redirected to log file and no longer stops Calibre-web on Windows
-  
-  - custom column of type "Text, but with a fixed set of permitted values" with default color no longer leads to error 500
-  
+  - Ignore special files originating from Apple devices in comic reader
+
   - And more. Full details can be found in the changelog.
 submitter: Xosten
 submission: https://github.com/getumbrel/umbrel-apps/pull/74
