Update Photoprism to 230615

--- a/photoprism/docker-compose.yml
+++ b/photoprism/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       PROXY_AUTH_WHITELIST: "/originals/*,/import/*"
   
   web:
-    image: photoprism/photoprism:221105-bullseye@sha256:52f2cfb9f46aec44dd2dec87c78ca121cc6fd174510db1ac371072c527f86558
+    image: photoprism/photoprism:230615@sha256:05c85ea124c5183d1cf9aa6236b3645259eb60a14ecdce3846f1b6b8f3d311c5
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: "1m"
