--- a/databag/docker-compose.yml
+++ b/databag/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   app_proxy:
     environment:
-      APP_HOST: databag_1
+      APP_HOST: databag_web_1
       APP_PORT: 7000
       
   web:
