--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: networking
 name: Urbit
-version: "v2.9"
+version: "v2.10"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,7 +35,16 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  A few days ago we discovered a performance issue when a remote scry publisher gets many simultaneous requests, as often happens during OTA updates. This performance bug caused the publisher to do 500x more work than necessary. We have now released vere-v2.9 to fix the issue.
+  This release includes runtime fixes mainly aimed at OTA publishers. A
+  publisher running vere-v2.10 and urbit-os-v2.142 (releasing in a few
+  days) will be able to reliably deliver the initial OTA through remote
+  scry instead of falling back to ames.
+  
+  The release also includes significantly better long-running replay
+  capabilities that were missing since vere-v1.14. The <your-ship>/.run
+  play command now supports the –auto-meld command line flag to
+  automatically meld a long memory-intensive replay. It also supports the
+  –snap-at x command line flag to snapshot every x events.
 
 
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.9
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.10
