chore(nutstash-wallet): update to v0.1.12

--- a/nutstash-wallet/umbrel-app.yml
+++ b/nutstash-wallet/umbrel-app.yml
@@ -2,19 +2,19 @@ manifestVersion: 1
 id: nutstash-wallet
 category: bitcoin
 name: Nutstash Wallet
-version: "0.1.10"
+version: "0.1.12"
 tagline: Nutstash is a Cashu wallet for your browser.
-description: >- 
+description: >-
   What is Cashu?
 
   "Cashu is a free and open-source Chaumian ecash system built for Bitcoin. Cashu offers near-perfect privacy for users of custodial Bitcoin applications. Nobody needs to knows who you are, how much funds you have, and with whom you transact with." - cashu.space
 
 
   This app is in early development and most likely buggy. It does handle real sats though, so be sure to use only amounts that are small enough to lose.
-  
+
 releaseNotes: >-
-  - Initial release on the umbrel app store
-  
+  - Nutstash now automatically checks and update outdated mint keys
+  - fix bug: pay invoice with random tokens
 developer: gandlafbtc
 website: https://nutstash.app/
 dependencies: []
