Fix no access to download directories in bazaar
Fixes an issue where bazaar tries to read the media file and returns an error:

FileNotFoundError: [Errno 2] No such file or directory: \'/downloads/movies/[movie_file_name]

--- a/bazarr/docker-compose.yml
+++ b/bazarr/docker-compose.yml
@@ -14,4 +14,5 @@ services:
       - PGID=1000
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
+      - ${UMBREL_ROOT}/data/storage/downloads:/downloads
     restart: on-failure
