tweak release notes

--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -38,9 +38,9 @@ releaseNotes: >-
   
   - Improvements for Caliblur Theme
   
-  - series type custom column are enable
+  - series type custom column
   
-  - And more. Full details can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.20
+  - And more
 
 
   Bug fixes:
@@ -51,6 +51,9 @@ releaseNotes: >-
   
   - Ignore special files originating from Apple devices in comic reader
   
-  - And more. Full details can be found in the changelog.
+  - And more
+
+
+  Full release notes can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.20
 submitter: Xosten
 submission: https://github.com/getumbrel/umbrel-apps/pull/74
