Update Trilium Notes to v0.60.4 (#655)

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: trilium-notes
 category: files
 name: Trilium Notes
-version: "0.59.4"
+version: "0.60.4"
 tagline: Build your personal knowledge base with Trilium Notes
 description: >-
   Features
@@ -61,20 +61,24 @@ torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/199
 releaseNotes: >-
-  This update upgrades Trilium Notes from version 0.55.1 to 0.59.4.
-  
-  
-  Version 0.59.4 includes the following changes:
+  This update upgrades Trilium Notes from version 0.59.4 to 0.60.4.
 
-  - fix displaying error message in mermaid
-  
-  - download offline images from libreoffice
-  
-  - fix duplicating subtree with internal links
-  
-  - don't update attribute detail while composing CJK characters
-  
-  - fix click events propagating from context menu being closed
-  
-  
-  Full release notes and detailed information for versions between 0.55.1 and 0.59.4 are available at https://github.com/zadam/trilium/releases
+
+  Version 0.60.4 includes the following changes:
+
+  - consistent tooltip arrow style
+
+  - selected text in HTML view is searched immediately in find box
+
+  - smooth scrolling for TOC
+
+  - improved Cyrillic font support
+
+  - move "tree actions" to the right
+
+  - improved include note display
+
+  - added ability to override default search engine
+
+
+  Full release notes and detailed information for versions between 0.59.4 and 0.60.4. are available at https://github.com/zadam/trilium/releases
