--- a/bazarr/umbrel-app.yml
+++ b/bazarr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: bazarr
 category: media
 name: Bazarr
-version: "1.2.1"
+version: "1.2.2"
 tagline: Manage and download subtitles for Sonarr and Radarr
 description: >-
   Bazarr is a companion application to Sonarr and Radarr that manages and downloads subtitles based on your requirements.
@@ -17,6 +17,11 @@ description: >-
   During initial set-up, you will need to input your Umbrel device's IP address to connect to Sonarr and/or Radarr.
   You can find your device's IP address by visiting your router's admin dashboard or by using an IP scanning tool like Angry IP Scanner.
   You will also need to input your API key for Sonarr and/or Radarr. You can find your API keys in the settings of the Sonarr and Radarr apps.
+releaseNotes: >-
+  Small bug fixes and improvements.
+
+
+  Read the full release notes at https://github.com/morpheus65535/bazarr/releases/tag/v1.2.2
 developer: morpheus65535
 website: https://www.bazarr.media/
 dependencies: []
