--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: bitcoin
 name: Lightning Node
-version: "v0.16.3-beta"
+version: "v0.16.4-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,10 +22,10 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This minor LND release contains bug fixes and is intended to optimize the recently added mempool watching logic, and also fix several suspected inadvertent force close vectors.
+  This release is a minor release to fix a memory leak inadvertently introduced by optimizations to the mempool scanning logic.
   
   
-  Read the full release notes for additional information and detailed changes at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/release-notes-0.16.3.md
+  Read the full release notes for additional information and detailed changes at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/release-notes-0.16.4.md
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
