--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.61.0"
+version: "v1.65.0"
 tagline: High performance photo and video backup solution
 description: >-
   An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
@@ -53,10 +53,15 @@ releaseNotes: >
 
   - Memories feature
 
+  - Select-all button on the web
+
+  - The thumbnail now displays the blur version of the thumbnail image before the actual image is loaded. This mechanism replaces the transition from the gray box to the actual image to provide a better transition in the browsing experience.
+
   - and more!
 
 
-  Full release notes for this update can be found at https://github.com/immich-app/immich/releases/tag/v1.61.0
+  Full release notes for this update can be found at https://github.com/immich-app/immich/releases/tag/v1.65.0
+  Full changelog between v1.61.0 and v1.65.0 can be found here: https://github.com/immich-app/immich/compare/v1.61.0...v1.65.0
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
