--- a/lndg/umbrel-app.yml
+++ b/lndg/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lndg
 category: bitcoin
 name: LNDg
-version: "1.6.4"
+version: "1.7.0"
 tagline: Analyze and automate your Lightning node management
 description: LNDg is your command center for running a profitable and efficient
   routing node. From quickly viewing your node's health, automated rebalancing,
@@ -22,18 +22,18 @@ path: ""
 defaultUsername: lndg-admin
 deterministicPassword: true
 releaseNotes: >-
-  - Updated and improved UI theme
+  - Updated dashboard to reduce load times
   
-  - Bump unconfirmed transactions from /balances
+  - Updated AutoFee logic and added two new variables
   
-  - Downstream HTLC recording and aggregration
+  - Legacy address generation and view previous addresses
   
-  - Greatly improved loading time of the /rebalancing page
+  - New chart added to P&L page 
   
-  - Removes all failed HTLCs greater than 30 days old
+  - Operator notes for any channel
   
-  - Additional fixes included in v1.6.4
+  - Estimate a fee bump or broadcast a raw tx
   
-  - And more... Full details can be found here: https://github.com/cryptosharks131/lndg/releases/tag/v1.6.0
+  - And more... Full details can be found here: https://github.com/cryptosharks131/lndg/releases/tag/v1.7.0
 submitter: cryptosharks131
 submission: https://github.com/getumbrel/umbrel/pull/1189
