--- a/quant-ux/docker-compose.yml
+++ b/quant-ux/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ${APP_DATA_DIR}/data/db:/data/db
   
   frontend:
-    image: impranshu/qux-fe:v1@sha256:6c942cf7f34cc80d971f3a7e14e2872efe6ad0ee890098911d34afca94a8b067
+    image: impranshu/quant-ux-fe:v1@sha256:6c942cf7f34cc80d971f3a7e14e2872efe6ad0ee890098911d34afca94a8b067
     restart: on-failure
     # Image uploads break if we run as non-root
     # user: 1000:1000
@@ -22,7 +22,7 @@ services:
       - QUX_PROXY_URL=http://quant-ux_backend_1:8080
   
   backend:
-    image: impranshu/qux-be:v1@sha256:ef90fd4fbda7019613929d480843381b04d3fc7e393014b5105cfd3be6dec531
+    image: impranshu/quant-ux-be:v1@sha256:ef90fd4fbda7019613929d480843381b04d3fc7e393014b5105cfd3be6dec531
     restart: on-failure
     # Image uploads break if we run as non-root
     # user: 1000:1000
