update docker image link to official image link

--- a/wbo/docker-compose.yml
+++ b/wbo/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: wbo
     volumes:
       - ${APP_DATA_DIR}/wbo-boards:/opt/app/server-data
-    image: impranshu/wbo:1@sha256:1458870c58a319638bcf7d474b76fe4b2eafb1020a97444680345a60d0e7896c
+    image: lovasoa/wbo:v1.19.1@sha256:fa70c14ba4c27c4413018c1b1537e67953d283a76d896eeae178ddb0e074b0e8
     environment:
       - UID=1000
       - GID=1000
