--- a/snort/docker-compose.yml
+++ b/snort/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       APP_PORT: 80
 
   web:
-    image: git.v0l.io/kieran/snort:v0.1.10@sha256:06486c6d92206f585b9049237b42432fa27b2b1607f969356ca5d792077dcf26
+    image: voidic/snort:v0.1.11@sha256:1ed24c9404471b4b71de234dc8dfc50a3b7ad6892f03fe9ee73c582c3bd7701c
     init: true
