--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: snort
 category: Social
 name: Snort
-version: "v0.1.10"
+version: "v0.1.11"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
@@ -45,6 +45,16 @@ releaseNotes: >-
 
   - NIP-59 Gift Wrap support
 
+  - `@snort/system` package 
+
+  - `@snort/system-react` package 
+
+  - Live streaming page (NIP-102)
+
+  - Chat system refactor (adding new chat systems much easier now, NIP-29 first candidate)
+
+  - NIP-29 simple group chat support
+
   ## Changed
 
   - Error page shows actual error message now, also a button to reset app cache
@@ -58,8 +68,16 @@ releaseNotes: >-
   ## Fixed
 
   - Unmarked thread events replies out of order
+  
+  - Profile links with incorrect hrp fixed in some places
 
-  https://git.v0l.io/Kieran/snort/compare/v0.1.8...v0.1.10
+  - `naddr` event loading fixed
+
+  - Relay specific requests fixed (Global tab / Search page)
+
+  - NWC connection responds to AUTH requests now
+
+  https://git.v0l.io/Kieran/snort/compare/v0.1.8...v0.1.11
 developer: Snort
 website: https://snort.social
 dependencies: []
