--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -1,14 +1,9 @@
 version: "3.7"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: home-assistant_server_1
-      APP_PORT: 8123
-      PROXY_AUTH_ADD: "false"
-
   server:
-    image: homeassistant/home-assistant:2023.6@sha256:8e069fcfddbd95c0acff88b9e515e3b208c2a5b4ad801a8f0cb8b55be417fc45
+    image: homeassistant/home-assistant:2023.6.3@sha256:1dd89ec1ce8de5ea869a489d5699bd91f77058ffaa6f5484b3e81323128abd2c
+    network_mode: host
+    # UI at default port 8123
     volumes:
       - ${APP_DATA_DIR}/data:/config
-      - ${APP_DATA_DIR}/configuration.yaml:/config/configuration.yaml
