--- a/snort/docker-compose.yml
+++ b/snort/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       APP_PORT: 80
 
   web:
-    image: ghcr.io/v0l/snort:v0.1.8@sha256:ccc07d680cf2210873ac28c90a305de43777d968ce4b06c6824d26362bde9e67
+    image: voidic/snort:v0.1.11@sha256:53784adc48f51ebe9b1c18baf2236b712ee365004d84e721e3e9eb0f91fbf0e5
     init: true
