--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: snort
 category: social
 name: Snort
-version: "v0.1.8"
+version: "v0.1.11"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
@@ -11,48 +11,76 @@ description: >-
 releaseNotes: >-
   ## Added
 
-  * Tamil Language support
+  - Discover tab, shows trending users/posts from nostr.build
 
-  * Quoted notes are rendered embedded
+  - New DM styles
 
-  * Multi-account support for subscribers 
+  - Mentioned Zapstr tracks are previewed on Snort with player
 
-  * Zapper key loading processing in background to speed up profile loading
+  - Custom emoji rendering in posts (NIP-30)
 
-  * Export keys page added to settings
+  - Lanaguage selector on new user flow 
 
-  * NIP-94 support for rendering quoted file metadata events
+  - ZapPool, support nostr ecosystem by donating a percentage of your zaps
 
-  * Interactions cache (zaps/likes/reports) for better UX
+  - Alby NWC link added to NWC connect page
 
-  * Full screen image/video previews in modal
+  - SemisolDev follow recommendations on Discover tab
 
-  * Re-broadcast own events dialog
+  - Pubkey lists (NIP-51) render inline when mentioned in notes
 
-  * Nostr wallet connect support
+  - Persian language
 
-  * Cashu token parsing preview with redeem link 
+  - OpenGraph Image/Video media rendered inside link preview box
 
-  * Trending notes/people tabs added to search page
+  - Option to zap everybody on mentioned pubkey list
+
+  - L402 support for inline media (paywall content)
+
+  - Gossip model, query follows write relays for events
+
+  - @snort/system NPM package containing Snort core nostr code
+
+  - NIP-44 Encryption scheme support
+
+  - NIP-59 Gift Wrap support
+
+  - `@snort/system` package 
+
+  - `@snort/system-react` package 
+
+  - Live streaming page (NIP-102)
+
+  - Chat system refactor (adding new chat systems much easier now, NIP-29 first candidate)
+
+  - NIP-29 simple group chat support
 
 
   ## Changed
-  
-  * Profile page loads only 200 latest notes, improving profile load times for accounts with less activity 
 
-  * New user flow has been tweaked to be shorter with NIP5 & Twitter import steps removed
+  - Error page shows actual error message now, also a button to reset app cache
+
+  - Massivly improved profile loading 
+
+  - Improved JS bundle size by ejecting CRA and using dynamic modules
+
+  - Switched to `@void-cat/api` package for void.cat uploads 
 
 
   ## Fixed
-  
-  * Thread navigation without page reload
 
-  * NIP-42 functionality restored
+  - Unmarked thread events replies out of order
   
-  * `a` tagged kind 1 replies render properly under root event
-  
+  - Profile links with incorrect hrp fixed in some places
 
-  **Full Changelog**: https://github.com/v0l/snort/compare/v0.1.7...v0.1.8
+  - `naddr` event loading fixed
+
+  - Relay specific requests fixed (Global tab / Search page)
+
+  - NWC connection responds to AUTH requests now
+
+
+  https://git.v0l.io/Kieran/snort/compare/v0.1.8...v0.1.11
 developer: Snort
 website: https://snort.social
 dependencies: []
