bind /dev:/dev and set privileged flag to true

--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     image: homeassistant/home-assistant:2023.6.3@sha256:1dd89ec1ce8de5ea869a489d5699bd91f77058ffaa6f5484b3e81323128abd2c
     network_mode: host
     # UI at default port 8123
+    privileged: true
     volumes:
       - ${APP_DATA_DIR}/data:/config
+      - /dev:/dev
