--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -47,21 +47,18 @@ description: >-
 releaseNotes: >
   This update brings the following new features to Immich:
 
-  - Justified layout for timeline view
+  - Choose a new feature photo for a person (in order to use this feature, please run the Detect Faces job for ALL)
 
-  - Proper support for RAW file formats
+  - Shift-key selection on the web timeline
 
-  - Memories feature
+  - Support for more raw formats
 
-  - Select-all button on the web
-
-  - The thumbnail now displays the blur version of the thumbnail image before the actual image is loaded. This mechanism replaces the transition from the gray box to the actual image to provide a better transition in the browsing experience.
+  - Album titles now appear in the search results
 
   - and more!
 
 
-  Full release notes for this update can be found at https://github.com/immich-app/immich/releases/tag/v1.65.0
-  Full changelog between v1.61.0 and v1.65.0 can be found here: https://github.com/immich-app/immich/compare/v1.61.0...v1.65.0
+  Full release notes are found at: https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
