add back in redis bind mount

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -90,6 +90,8 @@ services:
     image: redis:6.2-alpine@sha256:70a7a5b641117670beae0d80658430853896b5ef269ccf00d1827427e3263fa3
     user: "1000:1000"
     restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/data/redis:/data
 
   postgres:
     image: postgres:14-alpine@sha256:28407a9961e76f2d285dc6991e8e48893503cc3836a4755bbc2d40bcc272a441
