Update Immich to 1.66.1 (#659)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.61.0"
+version: "v1.66.1"
 tagline: High performance photo and video backup solution
 description: >-
   An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
@@ -47,16 +47,18 @@ description: >-
 releaseNotes: >
   This update brings the following new features to Immich:
 
-  - Justified layout for timeline view
+  - Choose a new feature photo for a person (in order to use this feature, please run the Detect Faces job for ALL)
 
-  - Proper support for RAW file formats
+  - Shift-key selection on the web timeline
 
-  - Memories feature
+  - Support for more raw formats
+
+  - Album titles now appear in the search results
 
   - and more!
 
 
-  Full release notes for this update can be found at https://github.com/immich-app/immich/releases/tag/v1.61.0
+  Full release notes are found at: https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
