Update mempool description+tagline (v2.5, mid-2023)

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -3,41 +3,11 @@ id: mempool
 category: bitcoin
 name: mempool
 version: "2.5.0"
-tagline: A self-hosted explorer for the Bitcoin community
+tagline: Explore the full Bitcoin ecosystem
 description: >-
-  Trusted third parties are security holes. Self-host your own
-  instance of mempool.space on Umbrel for maximum privacy.
+    Be your own explorer.
 
-
-  This app has a Lightning explorer, but you need to install the
-  Lightning Node app on your Umbrel first. If you install it after
-  Mempool, restart your Umbrel for the Lightning explorer to work. 
-
-
-  Features:
-
-  - Live dashboard visualizing the mempool and blockchain
-
-  - Live transaction tracking
-
-  - Search any transaction, block, or address
-
-  - Fee estimations
-
-  - Mempool historical data
-
-  - Mining dashboard with key hashrate, difficulty, and reward metrics
-
-  - View transaction scripts and op_return messages
-
-  - Audio notifications on transaction confirmed and address balance change
-
-  - Support for over 32 languages
-
-  - Lightning explorer (when the Lightning Node app is installed)
-
-  - JSON APIs
-
+    Run your own instance of The Mempool Open Source Project and trust no one—use your own node to beautifully visualize data about the Bitcoin network, transactions, blockchain, mempool, and more.
 
   This product includes GeoLite2 data created by MaxMind, available from https://www.maxmind.com
 
