update release notes

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -31,10 +31,20 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  Version 1.286.0 release notes:
+  Changed:
 
-  # Fixed
+  - Hid the average buy price in the position detail chart if there is no holding
   
-  Fixed the creation of (wealth) items and liabilities
+  - Improved the language localization for French
+  
+  - Refactored the blog articles to standalone components
+
+
+  Fixed:
+  
+  - Fixed the sorting by currency in the activities table
+
+
+  For full release notes and additional changes from previous version 1.269, please visit: https://github.com/ghostfolio/ghostfolio/releases
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
