--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "1.269.0"
+version: "1.287.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,17 +31,20 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This version contains a crucial update to address the inability to add new securities, an issue that arose from a recent change to Yahoo Finance.
-  A full list of new features, improvements, and bug fixes
-  for versions between 1.241.0 and 1.269.0 can be found here: https://github.com/ghostfolio/ghostfolio/releases.
+  Changed:
 
-
-  Version 1.269.0 release notes:
-
-  - Added FINANCIAL_MODELING_PREP as a new data source type
-
-  - Improved the market price on the first buy date in the chart of the position detail dialog
+  - Hid the average buy price in the position detail chart if there is no holding
   
-  - Restructured the admin control panel with a new settings tab
+  - Improved the language localization for French
+  
+  - Refactored the blog articles to standalone components
+
+
+  Fixed:
+  
+  - Fixed the sorting by currency in the activities table
+
+
+  For full release notes and additional changes from previous version 1.269, please visit: https://github.com/ghostfolio/ghostfolio/releases
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
