tweak release notes

--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -29,8 +29,9 @@ releaseNotes: >-
   and bug fixes the team made in the last month! 
   The biggest feature coming in this release is support for the Polygon POS chain (also known as Matic),
   but also a lot of smaller improvements and new protocol decoders for history events.
-    
-  Full changelog can be found here: https://github.com/rotki/rotki/releases/tag/v1.29.0
+
+
+  Full release notes and changes from previous versions can be found here: https://github.com/rotki/rotki/releases/
 gallery:
   - 1.jpg
   - 2.jpg
