--- a/speedtest-tracker/docker-compose.yml
+++ b/speedtest-tracker/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     environment:
       APP_HOST: speedtest-tracker_server_1
       APP_PORT: 80
-  
+
   server:
-    image: henrywhitaker3/speedtest-tracker:dev@sha256:489492b7965ebe5711cbcb838ec81a507aa18818206ec01365d54cbfb2794247
+    image: impranshu/speedtest:v1.12@sha256:e34b948351e5b46d3ee3a76669fccc253e614eb525a81d5cc175dd892a9f6db7
     volumes:
       - ${APP_DATA_DIR}/data:/config
     environment:
