Update Node-Red-Standalone to 3.0.2-14 (#670)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: node-red-standalone
 category: automation
 name: "Node-RED"
-version: "2.2.2-12"
+version: "3.0.2-14"
 tagline: Wire together the Internet of Things
 description: >-
   Node-RED is a visual programming tool for wiring together hardware
@@ -16,6 +16,8 @@ description: >-
 
   
   Note: If you would like your 'HTTP In' nodes to be accessible without authentication, then prepend your url with '/public/'. E.g. /public/do-something
+releaseNotes: >-
+  This updates Node Red from version 2.2.2 to version 3.0.2. For a full list of changes, see the release notes: https://github.com/node-red/node-red/releases
 developer: OpenJS Foundation
 website: https://nodered.org
 dependencies: []
