Update btc-rpc-explorer app to 3.4.0

--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btc-rpc-explorer
 category: bitcoin
 name: BTC RPC Explorer
-version: "3.3.0"
+version: "3.4.0"
 tagline: Simple, database-free blockchain explorer
 description: >-
   BTC RPC Explorer is a full-featured, self-hosted explorer for the
@@ -16,7 +16,7 @@ description: >-
 
   It's time to appreciate the "fullness" of your node.
 developer: Dan Janosik
-website: https://explorer.btc21.org
+website: https://bitcoinexplorer.org/
 dependencies:
   - bitcoin
   - electrs
