--- a/btc-rpc-explorer/docker-compose.yml
+++ b/btc-rpc-explorer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 8080
 
   web:
-    image: getumbrel/btc-rpc-explorer:v3.3.0@sha256:cfd14f8e722cfbf1ad106ba224569c8babe685422461a641abc210e13913c636
+    image: getumbrel/btc-rpc-explorer:v3.4.0
     restart: on-failure
     stop_grace_period: 1m
     environment:
