--- a/home-assistant/umbrel-app.yml
+++ b/home-assistant/umbrel-app.yml
@@ -33,14 +33,9 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  🚨 IMPORTANT: If you are using both the Home Assistant and Tallycoin Connect apps on your Umbrel, please
-  update Tallycoin Connect to the latest version on the Umbrel App Store (1.8.0-1) before updating Home Assistant. This step ensures a smooth
-  operation by preventing any port conflicts between the two apps.
-
-
-  For Home Assistant mobile app users, there's a minor yet important change you will need to make. In your Home Assistant mobile
-  app, please use the new port number '8123' to connect it to the Home Assistant app on your Umbrel, or
-  simply reinstall the mobile app for automatic Umbrel detection.
+  For Home Assistant mobile app users, there's an important change introduced since the last version. In your Home Assistant mobile app,
+  please use the new port number '8123' to connect it to the Home Assistant app on your Umbrel. If you haven't already made this change, please do so
+  now. Alternatively, you can reinstall the mobile app for automatic Umbrel detection.
   
 
   This update brings Home Assistant to version 2023.7.1, and now includes USB Discovery! The previous update included automatic device discovery for
