--- a/btc-rpc-explorer/docker-compose.yml
+++ b/btc-rpc-explorer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 8080
 
   web:
-    image: getumbrel/btc-rpc-explorer:v3.4.0
+    image: getumbrel/btc-rpc-explorer:v3.4.0@sha256:e85a1fe80919d308b1f80de2dc7174e7b61ec79384d695304fbf259b67b53594
     restart: on-failure
     stop_grace_period: 1m
     environment:
