add release notes

--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -15,6 +15,21 @@ description: >-
 
 
   It's time to appreciate the "fullness" of your node.
+releaseNotes: >-
+  This update includes the following changes:
+
+  - Several new API actions/changes (some breaking)
+
+  - Homepage additions such as a "Next Halving" widget.
+
+  - New /holidays, a curated list of Bitcoin 'Holidays'
+
+  - Refreshed "Dark" theme with blues toned down (legacy dark theme still available)
+
+  - and more!
+
+
+  Full release notes are available at https://github.com/janoside/btc-rpc-explorer/releases/tag/v3.4.0
 developer: Dan Janosik
 website: https://bitcoinexplorer.org/
 dependencies:
