tweak release notes

--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -16,13 +16,13 @@ description: >-
 
   It's time to appreciate the "fullness" of your node.
 releaseNotes: >-
-  This update includes the following changes:
+  This update brings several changes to BTC RPC Explorer, including:
 
   - Several new API actions/changes (some breaking)
 
   - Homepage additions such as a "Next Halving" widget.
 
-  - New /holidays, a curated list of Bitcoin 'Holidays'
+  - New curated list of Bitcoin "Holidays"
 
   - Refreshed "Dark" theme with blues toned down (legacy dark theme still available)
 
