update gameplay instructions

--- a/mario/umbrel-app.yml
+++ b/mario/umbrel-app.yml
@@ -5,7 +5,10 @@ name: Mario
 version: "1"
 tagline: Play the Retro Mario game on your Umbrel!
 description: >-
-  The Super Mario games are set primarily in the fictional Mushroom Kingdom, typically with Mario as the player character. He is usually joined by his brother, Luigi, and often by other members of the Mario cast. As platform games, they involve the player character running and jumping across platforms and atop enemies in themed levels. The games have simple plots, typically with Mario and Luigi rescuing the kidnapped Princess Peach from the primary antagonist, Bowser
+  The Super Mario games are set primarily in the fictional Mushroom Kingdom, typically with Mario as the player character. He is usually joined by his brother, Luigi, and often by other members of the Mario cast. As platform games, they involve the player character running and jumping across platforms and atop enemies in themed levels. The games have simple plots, typically with Mario and Luigi rescuing the kidnapped Princess Peach from the primary antagonist, Bowser.
+
+
+  Note: Press "S" to Jump and arrow keys to control.
 developer: Pranshu Agrawal
 website: https://github.com/IMPranshu
 dependencies: []
