Pin monerod to v0.18.2.2

--- a/monero/docker-compose.yml
+++ b/monero/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     command: "${APP_MONERO_COMMAND}"
     healthcheck:
       disable: true
-    image: sethsimmons/simple-monerod:latest
+    image: sethsimmons/simple-monerod:v0.18.2.2
     ports:
       - "${APP_MONERO_P2P_PORT}:${APP_MONERO_P2P_PORT}"
       - "${APP_MONERO_RPC_PORT}:${APP_MONERO_RPC_PORT}"
