Update app id for App Store

--- a/monero/umbrel-app.yml
+++ b/monero/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1.1
-id: meganero-monero
+id: monero
 category: Finance
 name: Monero Node
 icon: https://raw.githubusercontent.com/deverickapollo/umbrel-monero/dev/ui/src/assets/community-monero-icon.png
