--- a/lidarr/umbrel-app.yml
+++ b/lidarr/umbrel-app.yml
@@ -14,6 +14,7 @@ description: >-
   It can also be configured to automatically upgrade the quality of existing files in the library when a better quality format becomes available.
 developer: Lidarr
 website: https://lidarr.audio/
+dependencies: []
 repo: https://github.com/Lidarr/Lidarr
 support: https://github.com/Lidarr/Lidarr/issues
 port: 8686
