Add sha sig to monerod

--- a/monero/docker-compose.yml
+++ b/monero/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     command: "${APP_MONERO_COMMAND}"
     healthcheck:
       disable: true
-    image: sethsimmons/simple-monerod:v0.18.2.2
+    image: sethsimmons/simple-monerod:v0.18.2.2@sha256:835a9305b02c0a640363ddc2e77d709289ff54c402ede0a7ca242ab70b6270d4
     ports:
       - "${APP_MONERO_P2P_PORT}:${APP_MONERO_P2P_PORT}"
       - "${APP_MONERO_RPC_PORT}:${APP_MONERO_RPC_PORT}"
