--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: specter-desktop
 category: Finance
 name: Specter Desktop
-version: "2.0.1"
+version: "1.14.5"
 tagline: Multisig with hardware wallets made easy
 description: >-
   Specter Desktop connects to the Bitcoin Core running on your Umbrel
@@ -44,18 +44,11 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release updates Specter Desktop from version 1.14.2 to 2.0.1. It includes various bug fixes and performance improvements, as well as the following new features:
+  This release updates Specter Desktop to version 1.14.5, which is the latest version that maintains full compatibility
+  with node implementations like the Bitcoin Node app on Umbrel. Compatibility for future versions is on the Specter Desktop
+  development roadmap, and these versions will be brought to Umbrel as soon as they are available!
 
 
-  - Refined user interface respecting the design of the original layout.
-  
-  - Ability to connect to the Bitcoin network via public Electrum servers (Spectrum Plugin).
-  
-  - Tor connectivity for all outgoing network traffic including Electrum traffic.
-  
-  - Enable Taproot support for Trezor #2295 (Manolis Mandrapilias)
-  
-  
   Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
