--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: specter-desktop
 category: bitcoin
 name: Specter Desktop
-version: "1.14.2"
+version: "1.14.5"
 tagline: Multisig with hardware wallets made easy
 description: >-
   Specter Desktop connects to the Bitcoin Core running on your Umbrel
@@ -44,38 +44,11 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - UIUX: Address labeling revamp #1978 (OTK & Manolis Mandrapilias)
+  This release updates Specter Desktop to version 1.14.5, which is the latest version that maintains full compatibility
+  with node implementations like the Bitcoin Node app on Umbrel. Compatibility for future versions is on the Specter Desktop
+  development roadmap, and these versions will be brought to Umbrel as soon as they are available!
 
-  - UIUX: Better node selection #1987 (Manolis Mandrapilias)
 
-  - UIUX: Update Passport connection instructions #2010 (BitcoinQnA)
-
-  - Bugfix: Long loading time of wallets at start-up with Spectrum #2015 (k9ert)
-
-  - Bugfix: Merkle proofs with Spectrum #2012 (k9ert)
-
-  - Bugfix: Addressinfo edge case fixed #2001 (relativisticelectron)
-
-  - Bugfix: Version not properly detected #2020 (k9ert)
-
-  - Chore: Generic error handling for API calls #2014 (k9ert)
-
-  - Chore: Moving the Spectrum extension to a core extension #2011 (k9ert)
-
-  - Chore: Bump qs from 6.5.2 to 6.5.3 in /pyinstaller/electron #2002 (dependabot[bot])
-
-  - Chore: Bump Spectrum and Python version #2027 (Manolis Mandrapilias)
-
-  - Chore: Cypress test for address labeling #2021 (Manolis Mandrapilias)
-
-  - Chore: Fix nix shell by generating hashes with pip-compile #2016 (hodlwave)
-
-  - Docs: Corrected build instructions #1996 (relativisticelectron)
-  
-  
-  Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v1.14.2
-  
-  
-  Compare to previous version: https://github.com/cryptoadvance/specter-desktop/compare/v1.14.1...v1.14.2
+  Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
