--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -17,7 +17,9 @@ description: >-
   
   Note: If you would like your 'HTTP In' nodes to be accessible without authentication, then prepend your url with '/public/'. E.g. /public/do-something
 releaseNotes: >-
-  Upgrading Node.js from version 14 to version 18. Staying on Node-RED 3.0.2. For a full list of changes, see the release notes: https://github.com/node-red/node-red/releases
+  This update does not alter the Node-RED version, which remains at 3.0.2. Instead, it upgrades the underlying Node.js
+  from version 14 to 18. This change is intended to extend compatibility with Node.js modules that were previously
+  unavailable to users on Node.js 14.
 developer: OpenJS Foundation
 website: https://nodered.org
 dependencies: []
