Move app to v0.0.1

--- a/monero/docker-compose.yml
+++ b/monero/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "true"
 
   server:
-    image: deverickapollo/umbrel-monero:master
+    image: deverickapollo/umbrel-monero:v0.0.1@sha256:bf1369f0027373f4c2c4aae4e76a7857ed5b4edea5fc48d0bddd02442e10b732
     depends_on: [monerod]
     restart: on-failure
     expose:
