--- a/blocky/umbrel-app.yml
+++ b/blocky/umbrel-app.yml
@@ -12,6 +12,4 @@ repo: https://github.com/0xERR0R/blocky
 support: https://github.com/0xERR0R/blocky/discussions
 port: 4000
 gallery:
-  - 1.jpg
-  - 2.jpg
-  - 3.jpg
+  - 1.png
