--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "2.1"
 services:
-  blocky:
+  app_proxy:
+    environment:
+      APP_HOST: blocky_web_1
+      APP_PORT: 4000
+  web:
     image: spx01/blocky
     container_name: blocky
     restart: unless-stopped
