--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -1,16 +1,9 @@
-version: "2.1"
+version: '3.7'
 services:
-  app_proxy:
-    environment:
-      APP_HOST: blocky_web_1
-      APP_PORT: 4000
-  web:
-    image: spx01/blocky
-    container_name: blocky
-    restart: unless-stopped
-    # Optional the instance hostname for logging purpose
-    hostname: blocky-hostname
- blocky-frontend:
+  blocky:
+    image: ghcr.io/0xerr0r/blocky:v0.19
+
+  blocky-frontend:
     depends_on:
       - blocky
     image: ghcr.io/mozart409/blocky-frontend:latest
