--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.7'
 services:
   blocky:
-    image: ghcr.io/0xerr0r/blocky:v0.19
-    platform: linux/arm64/v8
+    image: ghcr.io/0xerr0r/blocky:latest
 
   blocky-frontend:
     depends_on:
       - blocky
     image: ghcr.io/mozart409/blocky-frontend:latest
-    platform: linux/arm64/v8
     ports:
       - '8002:8002'
