--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.7'
 services:
   blocky:
-    image: ghcr.io/0xerr0r/blocky:latest
+    image: ghcr.io/0xerr0r/blocky:main
 
   blocky-frontend:
     depends_on:
       - blocky
-    image: ghcr.io/mozart409/blocky-frontend:latest
+    image: ghcr.io/mozart409/blocky-frontend:v0.1.1
     ports:
       - '8002:8002'
