--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -6,6 +6,6 @@ services:
   blocky-frontend:
     depends_on:
       - blocky
-    image: ghcr.io/mozart409/blocky-frontend:v0.1.1
+    image: ghcr.io/mozart409/blocky-frontend:v0.1.1@sha256:8dd8ad1dbaec7dd1738ce79d704f4735dc837a938aae216f13e4801c07668a8a
     ports:
       - '8002:8002'
