--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -6,6 +6,6 @@ services:
   blocky-frontend:
     depends_on:
       - blocky
-    image: adi3000/blocky-frontend
+    image: truecharts/blocky-frontend
     ports:
       - '8002:8002'
