--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -4,8 +4,9 @@ services:
     image: ghcr.io/0xerr0r/blocky:main
 
   blocky-frontend:
+  platform: "linux/arm64v8"
     depends_on:
       - blocky
-    image: truecharts/blocky-frontend
+    image: ghcr.io/mozart409/blocky-frontend:v0.1.1
     ports:
       - '8002:8002'
