--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3.7'
 services:
   blocky:
+   app_proxy:
+    environment:
+      APP_HOST: blocky_web_1
+      APP_PORT: 4000
     image: ghcr.io/0xerr0r/blocky:main
 
   blocky-frontend:
