Update dev and submitter

--- a/readarr/umbrel-app.yml
+++ b/readarr/umbrel-app.yml
@@ -6,7 +6,7 @@ version: "0.2.4"
 tagline: Your book collection manager
 description: >-
   Readarr is an ebook and audiobook collection manager for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new books from your favorite authors and will grab, sort, and rename them. Note that only one type of a given book is supported. If you want both an audiobook and ebook of a given book you will need multiple instances.
-developer: Radarr
+developer: Readarr
 website: https://readarr.com/
 dependencies:
   - transmission
@@ -23,5 +23,5 @@ defaultPassword: ""
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
-submitter: Umbrel
+submitter: Choff3
 submission: 
