Pin to getumbrel/umbrel-nostr-relay-proxy:v1.1.0

--- a/nostr-relay/docker-compose.yml
+++ b/nostr-relay/docker-compose.yml
@@ -27,8 +27,7 @@ services:
       - ${APP_DATA_DIR}/data/relay/db:/app/db
 
   relay-proxy:
-    # TODO: update with image once available
-    image: getumbrel/umbrel-nostr-relay-proxy
+    image: getumbrel/umbrel-nostr-relay-proxy:v1.1.0@sha256:c8086f63ac23ade15376fc22aa3cee894a0374c698e7354c2593d395812ff715
     user: "1000:1000"
     restart: on-failure
     environment:
