Update Damus wording

--- a/nostr-relay/umbrel-app.yml
+++ b/nostr-relay/umbrel-app.yml
@@ -8,7 +8,7 @@ description: >
   Introducing Nostr Relay — an official app by Umbrel.
 
   
-  Step 1. Connect your Nostr client (e.g., Damus, Amethyst) to your private relay for seamless backup of all Nostr activity. In Damus, add your Relay URL via Settings > Relays.
+  Step 1. Connect your Nostr client (e.g., Damus, Amethyst) to your private relay for seamless backup of all Nostr activity. In Damus, add your Relay URL via Menu > Relays.
 
   
   Tip: Install Tailscale on your Umbrel and your devices for an uninterrupted connection between your clients and your relay, even when you're away from your home network. Enable Tailscale's MagicDNS and use ws://umbrel:4848 as your Relay URL.
