update app description

--- a/freshrss/umbrel-app.yml
+++ b/freshrss/umbrel-app.yml
@@ -1,66 +1,22 @@
 manifestVersion: 1
 id: freshrss
-category: networking
-name: freshrss
+category: social
+name: Freshrss
 version: "1.21.0"
-tagline: A free, self-hostable aggregator for rss feeds.
+tagline: A free, self-hostable aggregator for rss feeds
 description: >-
-  FreshRSS is a self-hosted RSS and Atom feed aggregator.
-   It is lightweight, easy to work with, powerful, and customizable.
+  FreshRSS is a self-hosted RSS and Atom feed aggregator. It is lightweight, easy to work with, powerful, and customizable.
 
-   A Powerful Aggregator
-   Syndication
-   Follow websites, podcasts and video channels in a single place.
+  - Follow websites, podcasts and video channels in a single place.
 
+  - Search and save queries for quick access.
 
-   Reader
-   Read your articles directly in FreshRSS.
-
-
-   Search
-   Search and save queries for quick access.
-
-
-   Web scraping
-   Generate feeds by scraping external websites.
-
-
-   Feeds generation
-   Generate new feeds based on your filters.
-
-
-   OPML
-   Import and export your feeds with OPML.
-
-
-   WebSub
-   Stay connected to your feeds in real-time.
-
-
-   Configurable
-   Adapt to your needs thanks to a lot of options.
-
-
-   Mobile
-   Follow your feeds with or without a third-party application.
-
-
-   Fast & efficient
-   FreshRSS can manage 1M+ articles and 50k+ feeds without complaining.
-
-
-   Themes & extensions
-   Customize FreshRSS with themes and extensions.
-
-
-   International
-   FreshRSS is translated in more than 15 languages.
-
+  etc...
 developer: FreshRSS Org
 website: https://freshrss.org/
 dependencies: []
 repo: https://github.com/FreshRSS/FreshRSS
-support: https://github.com/FreshRSS/FreshRSS
+support: https://github.com/FreshRSS/FreshRSS/issues
 port: 3432
 gallery:
   - 1.jpg
@@ -70,4 +26,4 @@ path: ""
 deterministicPassword: false
 torOnly: false
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/700
