--- a/vscodium/umbrel-app.yml
+++ b/vscodium/umbrel-app.yml
@@ -10,7 +10,7 @@ developer: linuxserver
 repo: https://github.com/linuxserver/docker-vscodium
 port: 3000
 gallery:
-  - 1.jpg
+  - 1.png
   - 2.jpg
-  - 3.jpg
+  - 3.png
 defaultUsername: "abc"
