use /dev to connect printer

--- a/octoprint/docker-compose.yml
+++ b/octoprint/docker-compose.yml
@@ -8,9 +8,8 @@ services:
       PROXY_AUTH_ADD: "false"
 
   web:
-    image: octoprint/octoprint:1.8.7@sha256:4cccc197fda1346798a66ecbab45383c8daaa193630b6c3ad40947940cbdbfce
-   volumes:
-     - ${APP_DATA_DIR}/data:/octoprint
-    devices:
-      - "/dev/ttyACM0:/dev/ttyACM0"
+    image: octoprint/octoprint:1.9.2@sha256:41d23f39d66bdcdac895938f1662f13ca1cb6ac910d2254d8123f2cc27229ccc
+    volumes:
+      - ${APP_DATA_DIR}/data:/octoprint
+      - /dev:/dev
     restart: on-failure
