--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: octoprint
 category: Productivity
 name: OctoPrint
-version: "1.8.7"
+version: "1.9.2"
 tagline: The snappy web interface for your 3D printer.
 description: >-
   OctoPrint provides a snappy web interface for controlling consumer 3D printers.
@@ -15,6 +15,7 @@ support: https://community.octoprint.org/
 port: 5003
 submitter: mateosilguero
 submission: https://github.com/getumbrel/umbrel-apps/pull/449
+icon: https://octoprint.org/assets/img/octoprint-600x400.png
 gallery:
   - 1.jpg
   - 2.jpg
