Upgrade lnbits to 0.10.9

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: bitcoin
 name: LNbits
-version: "0.10.6"
+version: "0.10.9"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -41,44 +41,16 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  🚨 Critical Security Update: This update addresses a critical security vulnerability in LNbits. Please update as soon as possible.
+  🔧 The new Security panel
 
+  The Security panel has six components:
 
-  🔧 Extension Management Changes:
-  
-  
-  New and existing users should follow these steps to install extensions:
-
-
-  1. Copy your unique LNbits password from the LNbits' app store page on your Umbrel: 'umbrel.local/app-store/lnbits'.
-  
-  2. Access the Super Admin page of LNbits at 'umbrel.local:3007/uuidv4/<your-lnbits-password>'. Replace '<your-lnbits-password>' with the password you copied before.
-  
-  3. You can now install and uninstall extensions from this page.
-
-
-  🔄 Extension Restoration for Existing Users:
-
-
-  - If an extension was previously installed, it won't show up after the update.
-
-  - Reinstall the extension from the Super Admin page to restore its enabled state and data.
-
-
-  🔓 Extension Enabling/Disabling:
-
-
-  - Once installed, any user can enable/disable extensions from their user page.
-  
-  - Existing LNbits users that are updating their app may need to hard refresh their browser on the extensions page in order to enable/disable extensions.
-
-
-  👥 Granting Admin Access:
-
-
-  - From the Super Admin page, you can make other users admins.
-
-  - Admins can install extensions without visiting the Super Admin page.
+  - Server logs
+  - IP blocker 
+  - Rate limiter
+  - Security notifications
+  - Killswitch
+  - Watchdog 
 
   
   📄 Full Release Notes and detailed information is available at: https://github.com/lnbits/lnbits/releases
