update release notes

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -41,16 +41,26 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  🔧 The new Security panel
+  In this release, we introduce a whole suite of new security features to harden your LNbits instance. Our goal is to make these features
+  accessible and keep every instance as safe as possible to protect user funds from possible security breaches.
+
+
+  You will find a new Security panel in your Manage Server AdminUI that you can access as the super user. All features are opt-in and are also accessible via the LNbits API.
+
 
   The Security panel has six components:
 
-  - Server logs
-  - IP blocker 
-  - Rate limiter
-  - Security notifications
-  - Killswitch
-  - Watchdog 
+  - Server logs 📝
+
+  - IP blocker 🚫
+
+  - Rate limiter 🐌
+
+  - Security notifications 🔔
+
+  - Killswitch 🪓
+  
+  - Watchdog 🐕 (coming soon)
 
   
   📄 Full Release Notes and detailed information is available at: https://github.com/lnbits/lnbits/releases
